# calcium

./: .prettierrc  README.md  index.html  package-lock.json  package.json  tailwind.config.js
calcium-extension/: index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
calcium-extension/public/: content-script.js  manifest.json
calcium-extension/src/: App.svelte  index.css  index.ts  manifest.json
calcium-extension/src/lib/adapters/: browser.ts  caniuse.ts  index.ts  mdn.ts  npm.ts
calcium-search/: Cargo.toml
calcium-site/: .eslintrc.cjs  .prettierrc  :w  package-lock.json  package.json
calcium-site/src/: index.css
calcium-site/src/routes/: +layout.svelte  +page.svelte
src/: App.svelte  content-script.js  index.css  index.ts  manifest.json
src/lib/adapters/: base.ts  browser.ts  caniuse.ts  index.ts  mdn.ts
