[package]
name = "calcium-search"
version = "0.1.0"
edition = "2021"
authors = ["Ethan Lynn <ethanlynn0709@gmail.com>"]
description = "A blazingly fast search engine for the web."
license = "MIT"
repository = "https://github.com/ethanlynn/calcium"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
